--- a/resource/stylesheets/style.scss
+++ b/resource/stylesheets/style.scss
@@ -85,12 +85,3 @@ unwatched >.row {
 	float: left;
   }
 }
-
-.profile-link {
-  max-width: 135px;
-  overflow: hidden;
-
-  > a {
-	white-space: nowrap;
-  }
-}
